# ai-agents-hackathon-2026-the-last-minute-clutch

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_pipeline.py
frontend/src/: App.css  App.jsx  index.css
nyayaeval/: __init__.py  main.py
nyayaeval/agents/: __init__.py  adaptation.py  corrector.py  evaluator.py  export_node.py  graph_builder.py  ingestion.py
nyayaeval/api/: __init__.py  middleware.py  routes.py
nyayaeval/config/: __init__.py  logging.py  settings.py
nyayaeval/connectors/: __init__.py  adaption_client.py  llm_provider.py  neo4j_client.py  redis_client.py  registry.py
nyayaeval/core/: __init__.py  models.py  schemas.py  state.py
nyayaeval/export/: __init__.py  csv_exporter.py  jsonl_exporter.py
nyayaeval/pipeline/: __init__.py  checkpointer.py  graph.py  routing.py
scripts/: seed_neo4j.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_agents.py  test_neo4j_client.py  test_pipeline.py  test_state.py
